--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,30 +1,84 @@
+$break-small: 400px;
+$break-large: 750px;
+
 .header {
-  padding: 1rem 0 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 0;
+  @media screen and (min-width: $break-large) {
+    flex-direction: row;
+  }
 }
 
 .title {
   color: #000000;
-  font-size: 3rem;
+  font-size: 2rem;
   text-decoration: none;
+  text-transform: uppercase;
 }
 
-.nav-list {
+.nav-container {
+  margin-top: 1rem;
   display: flex;
-  list-style-type: none;
-  margin: 0;
-}
+  flex-direction: column;
+  align-items: center;
 
-.nav-item {
-  color: #999999;
-  font-size: 0.9rem;
-  margin-right: 1.3rem;
-  text-decoration: none;
-}
+  label {
+    font-size: 1.5rem;
+    display: none;
+  }
 
-.nav-item:hover {
-  color: #666666;
-}
+  input {
+    display: none;
+  }
 
-.active-nav-item {
-  color: #333333;
+  .nav-list {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+  }
+
+  .nav-item {
+    color: #999999;
+    font-size: 0.9rem;
+    margin-right: 1.8rem;
+    text-decoration: none;
+    font-style: italic;
+  }
+
+  .nav-item:hover {
+    color: #666666;
+  }
+
+  .active-nav-item {
+    color: #333333;
+  }
+
+  @media only screen and (max-width: $break-small) {
+    label {
+      display: block;
+      cursor: pointer;
+    }
+    .nav-list {
+      height: 20vh;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0s, opacity 1.2s linear;
+    }
+
+    .nav-item {
+      margin-right: 0;
+    }
+
+    input:checked + .nav-list {
+      display: flex;
+      visibility: visible;
+      opacity: 1;
+    }
+  }
 }
