--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -2,10 +2,9 @@
   margin: 0 auto;
   max-width: 750px;
   padding: 1rem;
-
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .content {
