--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,20 @@
 $break-small: 400px;
 $break-large: 750px;
 
+$color-darkred: #ce6a6b;
+$color-lightred: #ebaca2;
+$color-lightgreen: #bed3c3;
+$color-turquoise: #4a919e;
+$color-darkpurple: #212e53;
+$color-white: #f9f9f9f9;
+
 .section {
+  position: relative;
+  h1,
+  p,
+  .input-field {
+    color: $color-white;
+  }
   h1 {
     font-size: 1.7rem;
     margin-bottom: 5vh;
@@ -10,26 +23,36 @@ $break-large: 750px;
     font-size: 1.1rem;
     font-weight: 500;
     line-height: 1.5rem;
+    margin-bottom: 3vh;
   }
-  .blinkingLine {
+
+  .input-field {
+    background-color: $color-darkred;
+    border: none;
+    outline: none;
+    width: 20vw;
+  }
+
+  .blinking {
     animation: blinkingText 1s infinite;
     font-size: 1.2rem;
     font-weight: 100;
+    color: $color-white;
   }
+
   @keyframes blinkingText {
     0% {
-      color: #000000;
+      color: $color-white;
     }
-
     50% {
       color: transparent;
     }
-
     100% {
-      color: #000000;
+      color: $color-white;
     }
   }
 }
+
 @media only screen and (min-width: $break-small) {
   .section {
     padding-top: 20vh;
