--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -94,5 +94,6 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
-  font-family: "Arvo", sans-serif;
+  font-family: "Oswald", serif;
+  font-weight: 400;
 }
