add background image and new styling. Also fix all tabs

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,3 +1,12 @@
+$color-darkred: #ce6a6b;
+$color-lightred: #ebaca2;
+$color-lightgreen: #bed3c3;
+$color-turquoise: #4a919e;
+$color-darkpurple: #212e53;
+$color-white: #f9f9f9f9;
+
 .footer {
-  margin-top: 3rem;
+  text-align: center;
+  color: $color-lightred;
+  margin-bottom: 0.5rem;
 }
