--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -12,10 +12,12 @@ $color-white: #f9f9f9f9;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 1.5rem 0;
   @media screen and (min-width: $break-large) {
     flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
   }
 }
 
@@ -53,13 +55,13 @@ $color-white: #f9f9f9f9;
   .nav-item {
     color: $color-white;
     font-size: 0.9rem;
-    margin-right: 1.8rem;
+    margin: 0 0.9rem;
     text-decoration: none;
     font-style: italic;
   }
 
   .nav-item:hover {
-    color: $color-darkpurple;
+    color: $color-lightred;
   }
 
   .active-nav-item {
@@ -72,13 +74,13 @@ $color-white: #f9f9f9f9;
       cursor: pointer;
     }
     .nav-list {
-      height: 20vh;
+      height: 0;
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       visibility: hidden;
       opacity: 0;
-      transition: visibility 0s, opacity 0.8s linear;
+      transition: visibility 0s, opacity 0.5s linear, height 0.2s linear;
     }
 
     .nav-item {
@@ -89,6 +91,7 @@ $color-white: #f9f9f9f9;
       display: flex;
       visibility: visible;
       opacity: 1;
+      height: 20vh;
     }
   }
 }
