--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,3 +1,10 @@
+$color-darkred: #ce6a6b;
+$color-lightred: #ebaca2;
+$color-lightgreen: #bed3c3;
+$color-turquoise: #4a919e;
+$color-darkpurple: #212e53;
+$color-white: #f9f9f9f9;
+
 .posts {
   list-style-type: none;
   margin: 0;
