removed image for now

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,6 +8,7 @@ $color-white: #f9f9f9f9;
 .background {
   height: 100vh;
   overflow: hidden;
+  background-color: $color-lightred;
 }
 
 .container {
