--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,3 +1,6 @@
+$break-small: 400px;
+$break-large: 750px;
+
 $color-darkred: #ce6a6b;
 $color-lightred: #ebaca2;
 $color-lightgreen: #bed3c3;
@@ -18,13 +21,17 @@ $color-white: #f9f9f9f9;
   left: 0;
   right: 0;
   top: 0;
-  margin: 2.5vh auto;
+  margin: 0 auto;
   max-width: 1000px;
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  height: 95vh;
+  height: 100vh;
   overflow: scroll;
+  @media only screen and (min-width: $break-large) {
+    margin: 2.5vh auto;
+    height: 95vh;
+  }
 }
 
 .content {
