start on timeline

--- a/src/pages/me.module.scss
+++ b/src/pages/me.module.scss
@@ -8,11 +8,11 @@ $color-turquoise: #4a919e;
 $color-darkpurple: #212e53;
 $color-white: #f9f9f9f9;
 
-// section {
-//   padding: 3em;
-//   height: 100vh;
-//   position: relative;
-// }
+section {
+  padding: 3em;
+  height: 100vh;
+  position: relative;
+}
 
 // section:nth-child(odd) {
 //   background: $color-lightgreen;
