--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -38,6 +38,6 @@ $color-white: #f9f9f9f9;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   opacity: 1;
 }
