--- a/src/pages/me.module.scss
+++ b/src/pages/me.module.scss
@@ -12,13 +12,16 @@ $color-white: #f9f9f9f9;
   display: flex;
   flex-direction: column;
 }
-
 .about-header {
   color: $color-white;
-  font-size: 2rem;
-  margin: 2rem 0;
+  font-size: 1.4rem;
+  margin: 1rem 0;
   align-self: center;
   border-bottom: 1px solid $color-lightred;
+
+  @media screen and (min-width: $break-small) {
+    font-size: 2rem;
+  }
 }
 
 .a {
