--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -15,7 +15,6 @@ $color-white: #f9f9f9f9;
 }
 
 .container {
-  padding: 0 2rem;
   background-color: $color-darkpurple;
   position: absolute;
   left: 0;
@@ -26,11 +25,12 @@ $color-white: #f9f9f9f9;
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  height: 100vh;
+  min-height: 100vh;
   overflow: scroll;
   @media only screen and (min-width: $break-large) {
     margin: 2.5vh auto;
     height: 95vh;
+    padding: 0 2rem;
   }
 }
 
