--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -10,7 +10,7 @@ $color-white: #f9f9f9f9;
 
 .section {
   margin-bottom: 4vh;
-  padding: 0 2vw;
+  padding: 0 10vw;
   margin-top: 3vh;
   h1,
   p {
@@ -24,6 +24,7 @@ $color-white: #f9f9f9f9;
     font-size: 1.1rem;
     font-weight: 500;
     margin-bottom: 2vh;
+    line-height: 1.8rem;
   }
 
   .blinking {
