--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -8,7 +8,7 @@ $color-white: #f9f9f9f9;
 .content-section {
   height: 100%;
   padding: 2rem;
-  background-color: $color-lightred;
+  background-color: $color-white;
 }
 
 .image {
