--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -14,6 +14,7 @@ $color-white: #f9f9f9f9;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0;
 }
 
 .post {
@@ -28,7 +29,7 @@ $color-white: #f9f9f9f9;
     height: 132px;
     text-decoration: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
   a:hover {
