--- a/src/pages/me.module.scss
+++ b/src/pages/me.module.scss
@@ -13,11 +13,12 @@ $color-white: #f9f9f9f9;
   flex-direction: column;
 }
 .about-header {
-  color: $color-white;
-  font-size: 1.4rem;
-  margin: 1rem 0;
   align-self: center;
   border-bottom: 1px solid $color-lightred;
+  color: $color-white;
+  font-size: 1.4rem;
+  margin: 2rem 0 3rem;
+  padding-bottom: 1vh;
 
   @media screen and (min-width: $break-small) {
     font-size: 2rem;
