--- a/src/components/timeline.module.scss
+++ b/src/components/timeline.module.scss
@@ -11,20 +11,21 @@ $color-white: #f9f9f9;
 .section {
   display: flex;
   flex-direction: column;
-  height: auto;
   font-size: 0.7rem;
+  height: auto;
+  padding-bottom: 2rem;
 
   @media screen and (min-width: $break-small) {
     font-size: 1rem;
   }
 
   .div-container {
-    position: relative;
-    height: 25vh;
     color: $color-white;
-    padding: 0 4vw;
+    height: 25vh;
     font-weight: 200;
+    padding: 0 4vw;
     opacity: 0.2;
+    position: relative;
     transition: opacity 1s linear;
 
     @media screen and (min-width: $break-small) {
@@ -48,6 +49,9 @@ $color-white: #f9f9f9;
     width: calc(50% + 1px);
     .circle {
       left: calc(100% - 6px);
+      @media screen and (min-width: $break-small) {
+        left: calc(100% - 10px);
+      }
     }
   }
 
