--- a/src/components/contentHeader.module.scss
+++ b/src/components/contentHeader.module.scss
@@ -1,12 +1,4 @@
-$break-small: 400px;
-$break-large: 750px;
-
-$color-darkred: #ce6a6b;
-$color-lightred: #ebaca2;
-$color-lightgreen: #bed3c3;
-$color-turquoise: #4a919e;
-$color-darkpurple: #212e53;
-$color-white: #f9f9f9f9;
+@import "base";
 
 .header {
   margin-top: 2vh;
