--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,9 +1,4 @@
-$color-darkred: #ce6a6b;
-$color-lightred: #ebaca2;
-$color-lightgreen: #bed3c3;
-$color-turquoise: #4a919e;
-$color-darkpurple: #212e53;
-$color-white: #f9f9f9f9;
+@import "base";
 
 .footer {
   text-align: center;
