--- a/src/components/timeline.module.scss
+++ b/src/components/timeline.module.scss
@@ -15,13 +15,29 @@
     color: $color-white;
     height: 25vh;
     font-weight: 200;
-    padding: 0 4vw;
     opacity: 0.2;
+    padding: 0 4vw;
     position: relative;
     transition: opacity 1s linear;
+    .content {
+      position: absolute;
+      width: 85%;
+      p {
+        font-weight: 100;
+        font-style: italic;
+      }
 
+      a {
+        color: $color-lightred;
+        text-decoration: none;
+      }
+    }
     @media screen and (min-width: $break-small) {
-      height: 20vh;
+      height: 30vh;
+      p {
+        line-height: 1.5rem;
+        letter-spacing: 0.02rem;
+      }
     }
   }
 
@@ -36,9 +52,7 @@
     }
     .content {
       left: 200px;
-      position: absolute;
       transition: left 1s cubic-bezier(0.42, -0.02, 0.2, 1);
-      width: 100%;
     }
     .show-content {
       left: 50px;
@@ -57,7 +71,6 @@
     }
     .content {
       left: -200px;
-      position: absolute;
       transition: left 1s cubic-bezier(0.42, -0.02, 0.2, 1);
     }
     .show-content {
@@ -70,7 +83,7 @@
     width: 2vh;
     height: 2vh;
     border-radius: 50%;
-    border: 1px solid $color-darkred;
+    border: 2px solid $color-darkred;
     background-color: $color-turquoise;
     top: 0;
   }
