--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -20,7 +20,8 @@
   flex-direction: column;
   align-items: space-between;
   min-height: 95vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   @media only screen and (min-width: $break-large) {
     margin: 2.5vh auto;
