--- a/src/components/portfolio.module.scss
+++ b/src/components/portfolio.module.scss
@@ -4,6 +4,7 @@
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-items: center;
   .container {
     background-color: $color-lightgreen;
     border-radius: 5px;
