--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -21,14 +21,38 @@
 
   .blinking {
     animation: blinkingText 1s infinite;
-    font-size: 1.1rem;
+    font-size: 1.9rem;
     font-weight: 100;
     color: $color-white;
   }
 
+  .user-answer {
+    color: $color-white;
+    background: $color-darkpurple;
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-size: 32px;
+    font-style: italic;
+  }
+
+  .submit {
+    border-radius: 4px;
+    border: none;
+    margin-bottom: 1rem;
+    height: 2rem;
+    background-color: $color-turquoise;
+  }
+
+  .button-placeholder {
+    margin-bottom: 1rem;
+    height: 2rem;
+  }
+
   @media only screen and (min-width: $break-small) {
     padding: 0 5vw;
-    margin-top: 20vh;
+    margin-top: 5vh;
 
     h1 {
       font-size: 3rem;
@@ -38,7 +62,7 @@
       line-height: 3rem;
     }
     .blinking {
-      font-size: 1.8rem;
+      font-size: 3rem;
     }
   }
 
