--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -9,7 +9,6 @@
 
 .container {
   padding: 0 2rem;
-
   background-color: $color-darkpurple;
   position: absolute;
   left: 0;
@@ -20,13 +19,13 @@
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  min-height: 95vh;
+  min-height: 88vh;
   overflow-y: scroll;
   overflow-x: hidden;
 
   @media only screen and (min-width: $break-large) {
-    margin: 2.5vh auto;
-    height: 95vh;
+    margin: 0 auto;
+    height: 88vh;
   }
 }
 
