--- a/src/templates/readingList.module.scss
+++ b/src/templates/readingList.module.scss
@@ -11,6 +11,7 @@
 
 .post {
   margin: 2rem 0;
+  width: 100%;
   a {
     background: $color-lightgreen;
     opacity: 1;
@@ -30,7 +31,7 @@
   .aside {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
   h2 {
     padding: 0;
