--- a/src/templates/readingList.module.scss
+++ b/src/templates/readingList.module.scss
@@ -21,7 +21,7 @@
     height: 132px;
     text-decoration: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
   a:hover {
