--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,3 +16,17 @@ body {
   font-family: "Oswald", serif;
   font-weight: 400;
 }
+
+.gatsby-highlight {
+  background-color: #1d1f21;
+  border-radius: 0.3em;
+  margin: 0.5em 0;
+  padding: 1em;
+  overflow: auto;
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding: 0;
+  padding-left: 2.8em;
+  overflow: initial;
+}
