--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -4,15 +4,27 @@
   background-color: $color-white;
   height: 100%;
   padding: 2rem;
-  * {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: 500;
+  }
+
+  p,
+  i,
+  b,
+  li {
     font-family: "eb-garamond", serif;
-    font-weight: 400;
     letter-spacing: 0.5px;
     line-height: 1.5rem;
-  }
-  p {
     padding: 0;
-    // margin: 0;
+  }
+  code > span {
+    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   }
   a,
   a:visited {
