--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,7 +8,7 @@
 }
 
 .container {
-  padding: 0 2rem;
+  padding: 0 2rem 2rem;
   background-color: $color-darkpurple;
   position: absolute;
   left: 0;
@@ -19,13 +19,13 @@
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  min-height: 88vh;
+  height: 88vh;
   overflow-y: scroll;
   overflow-x: hidden;
 
   @media only screen and (min-width: $break-large) {
     margin: 0 auto;
-    height: 88vh;
+   height: 88vh;
   }
 }
 
