--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   max-width: 1000px;
-  height: 12vh;
+  height: 12%;
   margin: 0 auto;
   text-align: center;
   color: $color-lightred;
@@ -16,6 +16,10 @@
   border-top: 0.5px solid $color-white;
   p {
     margin: 0;
+  }
+    @media only screen and (min-width: $break-large) {
+
+   height: 12vh;
   }
 }
 
