--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: space-between;
-  height: 88vh;
+  height: 88%;
   overflow-y: scroll;
   overflow-x: hidden;
 
