--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1.5rem 0 0 0;
+  padding: 1.5rem 2rem 0 2rem;
+  border-bottom: 1px solid $color-white;
   @media screen and (min-width: $break-large) {
     flex-direction: row;
     justify-content: space-between;
