--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,7 +8,9 @@
 }
 
 .container {
-  padding: 0 2rem 2rem;
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
   background-color: $color-darkpurple;
   position: absolute;
   left: 0;
@@ -16,16 +18,11 @@
   top: 0;
   margin: 0 auto;
   max-width: 1000px;
-  display: flex;
-  flex-direction: column;
   align-items: space-between;
-  height: 88rvh;
   overflow-y: scroll;
   overflow-x: hidden;
-
   @media only screen and (min-width: $break-large) {
     margin: 0 auto;
-   height: 88vh;
   }
 }
 
@@ -35,6 +32,8 @@
   flex-direction: column;
   justify-content: flex-start;
   opacity: 1;
+  overflow: scroll;
+  padding: 2rem;
 }
 
 ::-webkit-scrollbar {
