--- a/src/templates/readingList.module.scss
+++ b/src/templates/readingList.module.scss
@@ -3,14 +3,14 @@
 .posts {
   padding: 0;
   list-style-type: none;
-  margin: 0;
+  margin: 0 0 2rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .post {
-  margin: 2rem 0;
+  margin-top: 2rem;
   width: 100%;
   a {
     background: $color-lightgreen;
@@ -46,7 +46,7 @@
 
   @media screen and (min-width: $break-small) {
     width: 80%;
-    margin: 0.9rem 0;
+    margin-top: 0.9rem 0;
   }
   h2 {
     font-size: 1.5rem;
