--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -27,13 +27,15 @@
 }
 
 .content {
-  flex-grow: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   opacity: 1;
-  overflow: scroll;
+  height: auto;
+  // overflow: scroll;
   padding: 2rem;
+  
 }
 
 ::-webkit-scrollbar {
