fixed background image issue and changed to fluid images on readling and blog list

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -9,7 +9,7 @@
 
 .container {
   display: flex;
-  min-height: 100vh;
+  height: 100%;
   flex-direction: column;
   background-color: $color-darkpurple;
   position: absolute;
