--- a/src/templates/blogList.module.scss
+++ b/src/templates/blogList.module.scss
@@ -34,7 +34,7 @@
     align-items: flex-start;
   }
   h2 {
-    padding: 0;
+    padding: 0 4vw 0 0;
     font-size: 1rem;
     margin-bottom: 0;
   }
@@ -56,7 +56,9 @@
   }
 }
 
-.image {
-  margin-left: 8vw;
-  object-fit: contain;
+.imageWrapper {
+  width: 100px;
+  min-height: 50px;
+  max-height: 90px;
+  overflow: hidden;
 }
