--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,15 +1,21 @@
 @import "base";
 @import "../pages/success.scss";
 
+.imageContainer {
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
+
 .background {
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
-  background-color: $color-lightred;
 }
 
 .container {
   display: flex;
-  height: 100%;
+  min-height: 100vh;
   flex-direction: column;
   background-color: $color-darkpurple;
   position: absolute;
@@ -23,6 +29,8 @@
   overflow-x: hidden;
   @media only screen and (min-width: $break-large) {
     margin: 0 auto;
+
+    height: 100%;
   }
 }
 
