--- a/src/components/portfolio.module.scss
+++ b/src/components/portfolio.module.scss
@@ -3,25 +3,38 @@
 .section {
   display: grid;
   grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
   justify-items: center;
   .container {
-    background-color: $color-lightgreen;
+    position: relative;
+    text-align: center;
+    color: white;
     border-radius: 5px;
     display: grid;
-    height: 250px;
     opacity: 0.6;
     width: 250px;
     &:hover {
       opacity: 1;
+      cursor: pointer;
+      .paragraph {
+        opacity: 1;
+      }
     }
   }
   .image {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    width: 100%;
   }
+
   .paragraph {
-    height: 35px;
-    text-align: center;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 1;
+    opacity: 0;
   }
 }
