--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -17,7 +17,8 @@
   p,
   i,
   b,
-  li {
+  li,
+  a {
     font-family: "eb-garamond", serif;
     letter-spacing: 0.5px;
     line-height: 1.5rem;
