--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -24,9 +24,11 @@
     line-height: 1.5rem;
     padding: 0;
   }
-  code, code > span, code > span > span {
+  code,
+  code > span,
+  code > span > span {
     font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
   a,
   a:visited {
@@ -36,8 +38,12 @@
   }
   img {
     width: 100%;
+    max-height: 350px;
+    object-fit: contain;
   }
   @media screen and (min-width: $break-large) {
     padding: 2rem 8rem;
+    width: 90%;
+    margin: 0 auto;
   }
 }
