Small mobile styling fix

--- a/src/pages/me.module.scss
+++ b/src/pages/me.module.scss
@@ -11,9 +11,12 @@
   font-size: 1.4rem;
   margin: 0 0 2rem;
   padding-bottom: 1vh;
+  margin-top: 6rem;
 
   @media screen and (min-width: $break-small) {
     font-size: 1.8rem;
+  margin-top: 0;
+
   }
 }
 
