--- a/src/components/portfolio.module.scss
+++ b/src/components/portfolio.module.scss
@@ -1,6 +1,7 @@
 @import "base";
 
 .section {
+  margin-top: 3rem;
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
